# armsim_ws

./: README.md
src/: .rosinstall.bak  README.md
src/arm26_config/: CMakeLists.txt  package.xml
src/arm26_config/config/: arm26.srdf  fake_controllers.yaml  gazebo_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml
src/arm26_config/launch/: demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  simple_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml
src/arm26_description/: CMakeLists.txt  package.xml
src/arm26_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/arm26_description/meshes/: base_link.stl  link1_1.stl  link3_1.stl  link5_1.stl  link6_1.stl
src/arm26_description/urdf/: arm26.gazebo  arm26.trans  arm26.urdf  materials.xacro
src/arm26_gazebo/: CMakeLists.txt  package.xml
src/arm26_gazebo/config/: sim_controllers.yaml
src/arm26_gazebo/launch/: arm26.launch
src/arm26_gazebo/meshes/: keyboard_clean.mtl
src/arm26_gazebo/urdf/: keyboard.urdf
src/arm26_gazebo/worlds/: arm26.world  keyboard.world
src/blender_gazebo/media/materials/scripts/: erc_landmark.material
src/blender_gazebo/sdf/: landmark.sdf.xacro
src/blender_gazebo/worlds/: marsyard2021.world  marsyard2021.world.xacro
src/fiducials/aruco_detect/launch/: aruco_detect.launch
src/fiducials/aruco_detect/scripts/: middlePoint.py
src/fiducials/aruco_detect/src/: aruco_detect.cpp
src/fiducials/aruco_gazebo/launch/: aruco_gazebo.launch
src/fiducials/aruco_gazebo/scripts/: aruco.py
src/panel/: CMakeLists.txt  package.xml
src/panel/launch/: display.launch  empty_artag.launch  gazebo.launch
src/panel/meshes/: base_link.STL
src/panel/urdf/: panel.csv  panel.urdf
src/panel_bhv/: CMakeLists.txt  package.xml
src/panel_bhv/script/: basit.py  main.py  marker_detector.py  panel_a_approach.py  start_node.py  test.py
